src/snapshots/transmute__parser__tests__err_struct_missing_field_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { : type }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [],
                ),
                span: 1:1; [0, 26],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:19; [18, 19],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    335,
                ),
            },
        ],
    },
)
