src/snapshots/transmute__parser__tests__err_struct_missing_first_field_name.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f2",
            "type2",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:27; [26, 28],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:31; [30, 35],
                            },
                            span: 1:27; [26, 35],
                        },
                    ],
                ),
                span: 1:1; [0, 37],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:19; [18, 19],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    369,
                ),
            },
        ],
    },
)
