src/snapshots/transmute__parser__tests__err_struct_missing_first_field_type.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { f1, f2: type2 }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f1",
            "f2",
            "type2",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:23; [22, 24],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 3,
                                },
                                span: 1:27; [26, 31],
                            },
                            span: 1:23; [22, 31],
                        },
                    ],
                ),
                span: 1:1; [0, 33],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got `,`",
                span: 1:21; [20, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    305,
                ),
            },
        ],
    },
)
