src/snapshots/transmute__parser__tests__err_struct_missing_last_field_type.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f0",
            "type0",
            "f1",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 20],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:23; [22, 27],
                            },
                            span: 1:19; [18, 27],
                        },
                    ],
                ),
                span: 1:1; [0, 33],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `:`, got `}`",
                span: 1:33; [32, 33],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    339,
                ),
            },
        ],
    },
)
