src/snapshots/transmute__parser__tests__err_struct_missing_middle_field_name.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "f0",
            "type0",
            "f2",
            "type2",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 20],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:23; [22, 27],
                            },
                            span: 1:19; [18, 27],
                        },
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 3,
                                },
                                span: 1:39; [38, 40],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 4,
                                },
                                span: 1:43; [42, 47],
                            },
                            span: 1:39; [38, 47],
                        },
                    ],
                ),
                span: 1:1; [0, 49],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:30; [29, 30],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    369,
                ),
            },
        ],
    },
)
