src/snapshots/transmute__parser__tests__err_struct_missing_open_curly.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "field",
            "type",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:17; [16, 21],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:24; [23, 27],
                            },
                            span: 1:17; [16, 27],
                        },
                    ],
                ),
                span: 1:1; [0, 29],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `{`, got identifier",
                span: 1:17; [16, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    274,
                ),
            },
        ],
    },
)
