src/snapshots/transmute__parser__tests__err_while_missing_condition.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Dummy,
                span: 1:7; [6, 6],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Block(
                    [],
                ),
                span: 1:7; [6, 9],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: While(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 9],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 9],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:7; [6, 7],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    655,
                ),
            },
        ],
    },
)
